--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
             "database/factories"
         ],
         "psr-4": {
-            "Taller\\": "app/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
